[gd_scene load_steps=9 format=3 uid="uid://pdayj6lpfufd"]

[ext_resource type="Script" uid="uid://vvbqsnkfsgqu" path="res://dice.gd" id="1_rmhvh"]
[ext_resource type="Texture2D" uid="uid://euhu5bws0vkh" path="res://Dice_assets/1.png" id="2_8rf0r"]
[ext_resource type="Texture2D" uid="uid://cobxynoodcip1" path="res://Dice_assets/2.png" id="3_8rf0r"]
[ext_resource type="Texture2D" uid="uid://dweicixbeff5a" path="res://Dice_assets/3.png" id="4_hitq5"]
[ext_resource type="Texture2D" uid="uid://bdfq2fnkq8n61" path="res://Dice_assets/4.png" id="5_c6lvo"]
[ext_resource type="Texture2D" uid="uid://cbdpkve1jbeym" path="res://Dice_assets/5.png" id="6_x03bd"]
[ext_resource type="Texture2D" uid="uid://j51v1to6yboa" path="res://Dice_assets/6.png" id="7_0ih4c"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ukaps"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_8rf0r")
}],
"loop": false,
"name": &"1",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_8rf0r")
}],
"loop": false,
"name": &"2",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_hitq5")
}],
"loop": false,
"name": &"3",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_c6lvo")
}],
"loop": false,
"name": &"4",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_x03bd")
}],
"loop": false,
"name": &"5",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_0ih4c")
}],
"loop": false,
"name": &"6",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_8rf0r")
}, {
"duration": 1.0,
"texture": ExtResource("3_8rf0r")
}, {
"duration": 1.0,
"texture": ExtResource("4_hitq5")
}, {
"duration": 1.0,
"texture": ExtResource("5_c6lvo")
}, {
"duration": 1.0,
"texture": ExtResource("6_x03bd")
}, {
"duration": 1.0,
"texture": ExtResource("7_0ih4c")
}],
"loop": false,
"name": &"Rolling",
"speed": 5.0
}]

[node name="D6" type="Node2D"]
script = ExtResource("1_rmhvh")

[node name="D6_Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(591, 311)
sprite_frames = SubResource("SpriteFrames_ukaps")
animation = &"1"

[node name="Roll button" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
text = "Roll!"

[connection signal="animation_finished" from="D6_Sprite" to="." method="_on_d_6_sprite_animation_finished"]
[connection signal="pressed" from="Roll button" to="." method="_on_roll_button_pressed"]
